--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -7,6 +7,9 @@ repositories {
 
 dependencies {
     implementation('org.slf4j:slf4j-nop:1.7.25')
+    implementation 'junit:junit:4.13.1'
+    implementation 'org.jetbrains:annotations:20.1.0'
+    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testImplementation group: 'org.testng', name: 'testng', version: '7.10.2'
     implementation 'org.seleniumhq.selenium:selenium-firefox-driver:4.25.0'
     }
